# FolderSet

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: handler.rs  jwt.rs  lib.rs  main.rs
src/database/: mod.rs  models.rs  schema.rs
src/handler/: user.rs
src/middleware/: auth.rs
