[package]
name = "folderset"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
jsonwebtoken = "8.1"
syn = { version = "1.0", features = ["parsing", "derive", "full", "visit"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
diesel = { version = "2.0.4", features = ["postgres", "chrono", "r2d2", "uuid"] }
dotenv = "0.15"
futures-util = "0.3"
actix-service = "2.0"
